fix: removes user avata on dashboard and reduce gap on nav bar

--- a/src/app/shared/layouts/main-layout/main-layout.component.scss
+++ b/src/app/shared/layouts/main-layout/main-layout.component.scss
@@ -483,7 +483,7 @@ $mobile-header-height: 64px;
 .header-actions {
   display: flex;
   align-items: center;
-  gap: $space-6;
+  gap: $space-1;
 }
 
 .header-user {
